test/errors/wav-read/wav-read.rom
Error in `wav-read.asm` on line 2: Could not read `wav-read.txt`
